{{$NEXT}}

0.10.11  2024-11-05T09:21:51+13:00
   - Disable local error handling for libxml2 2.13 Dtd parsing. Waiting
     on https://gitlab.gnome.org/GNOME/libxml2/-/issues/808

0.10.10  2024-11-05T07:31:45+13:00
   - Deprecate LibXML::Document input-compressed() which has proven to
     be inconsistent across libxml2 versions and platforms.
   - Fix initialization in Lib:XML::ErrorHandling.set-error-handling()
   - Rework DocumentFragment balanced chunk parsing for news libxml
     2.14+ implementation. Remove deprecated xmlKeepBlanksGlobal from
     xml6 bindings.
   - Fix some libxml 2.14+ test regressions and deprecation warnings
     in xml6 bindings.
   - Fix xmlBufCreate() to pass 'size' argument.
   - Refactor LibXML::_CharacterData string manipulation methods
   - Structure LibXML::DocumentFragment parse() method as multis;
     making it consistent with LibXML::Parser

0.10.9  2024-06-02T11:28:45+12:00
   - Deprecation of xmlLastError() global variable #111
   - Implement context-specific error handlers to be switched on with libxml
     2.13.0+ #111. There's still some more libxml support needed in areas
     such as Dtd and balanced chunk parsing.
   - Don't reference-count static predefined entities ('&gt;', '&lt', etc).
   - Fix reference-counting in associative node-sets and some Dtd internal
     tables #112
   - Fix stack leakage/eventual overflow in input-callback set-up/tear-down.
   - Deprecate AddChild() for LibXML::Attr;

0.10.8  2024-05-17T07:29:02+12:00
   - Fix flapping t/00dtd.t test #111

0.10.7  2024-05-14T11:18:11+12:00
   - Fix compilation against libxml2 v2.12.6 #111
   - Fix Windows install
   - Further expunge _xmlDefaultSAXLocator definitions

0.10.6  2023-10-31T05:46:03+13:00
   - Remove references to deprecated _xmlDefaultSAXLocator #108
   - Save HTML as HTML, not XHTML due to issues in browsers handling
     CDATA blocks #109

0.10.5  2023-08-28T08:51:47+12:00
   - Simplify generic error handling. Replace unnecessary Raku-side